[gd_scene load_steps=8 format=3 uid="uid://6xs2ww7uhsl5"]

[ext_resource type="Script" path="res://Entities/NPCs/Behaviours/simple_melee_attack.gd" id="1_n2f8j"]
[ext_resource type="AudioStream" uid="uid://8hsfr4t6hs1u" path="res://audio/sfx/placeholder/heavy_attack_follow_through.wav" id="3_nxgo6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uiwhd"]
size = Vector2(13, 33)

[sub_resource type="Animation" id="Animation_ua5in"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeCollisionArea:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackNoise:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ijt82"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeCollisionArea:monitoring")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AttackNoise:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6ucv"]
_data = {
"RESET": SubResource("Animation_ua5in"),
"attack": SubResource("Animation_ijt82")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1q54s"]
streams_count = 1
random_pitch = 1.25
stream_0/stream = ExtResource("3_nxgo6")
stream_0/weight = 1.0

[node name="SimpleMeleeAttack" type="Node2D"]
script = ExtResource("1_n2f8j")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(17.4275, -39.6079)
target_position = Vector2(30, 2.08165e-12)

[node name="MeleeCollisionArea" type="Area2D" parent="."]
position = Vector2(0, -27)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeCollisionArea"]
position = Vector2(18.5, -17.5)
shape = SubResource("RectangleShape2D_uiwhd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p6ucv")
}

[node name="AttackDelay" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackReload" type="Timer" parent="."]
one_shot = true

[node name="AttackNoise" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_1q54s")
bus = &"sfx"

[connection signal="body_entered" from="MeleeCollisionArea" to="." method="_on_melee_collision_area_body_entered"]
[connection signal="timeout" from="AttackDelay" to="." method="_on_attack_delay_timeout"]
[connection signal="timeout" from="AttackReload" to="." method="_on_attack_reload_timeout"]
